# quirky

./: LICENSE  README.md  pyproject.toml
src/quirky/: __init__.py  code.py
