[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quirky"
version = "0.1"
description = "Easy QR Code ASCII Python Library"
authors = [{name = "Gabyface910"}]
requires-python = ">=3.7"
dependencies = [
    "qrcode>=6.3"
]

[tool.setuptools.packages.find]
where = ["src"]
